--- a/index-equipment.html
+++ b/index-equipment.html
@@ -707,19 +707,19 @@
         </span>
     </div>
 
-    <div class="main-grid-photos">
-        <div class="main-left">
-            <div class="main-left-items">
+    <div class="main-grid-photos eq-grid-photo">
+        <div class="main-left eq-left">
+            <div class="main-left-items eq-left-items">
                 <a href="#">  
-                    <div class="main-left-items-img-1 place-item-img-1">
+                    <div class="main-left-items-img-1 place-item-img-1 place-eq-item-1">
                         <img src="img/equipment/Магазины.jpg" alt="">
-                        <div class="goods-eq-title"><span>Торговые Витрины</span></div>
+                        <div class="goods-eq-title eq-title-sm"><span>Торговые Витрины</span></div>
                     </div>
                 </a>
-                <a href="#">  
-                    <div class="main-left-items-img-2 place-item-img-1">
+                <a class="eq-right-side" href="#">  
+                    <div class="main-left-items-img-2 place-item-img-1 eq-left-item-2">
                         <img src="img/equipment/Торговые острова.jpg" alt="">
-                        <div class="goods-eq-title"><span>Торговые острова</span></div>
+                        <div class="goods-eq-title eq-title-sm"><span>Торговые острова</span></div>
                     </div>
                 </a>
             </div>
@@ -738,29 +738,29 @@
             </p>
            <a href="#"><div class="more-btn main-more-btn">ОСТАВИТЬ ЗАЯВКУ</div></a>
         </div>
-        <div class="main-right">
-            <div class="main-right-top">
+        <div class="main-right eq-right">
+            <div class="main-right-top eq-right-top">
               <a href="#">  
-                <div class="top-photo first-right place-item-img-1">
+                <div class="top-photo first-right place-item-img-1 place-item-img-eq">
                     <img src="img/equipment/Диваны.jpg" alt="" >
-                    <div class="goods-eq-title goods-eq-title-big"><span>Диваны</span></div>
+                    <div class="goods-eq-title goods-eq-title-big eq-title-sm"><span>Диваны</span></div>
                 </div>
               </a> 
             </div>
-            <div class="main-right-bottom">
+            <div class="main-right-bottom eq-right-bot">
                 <!-- <div class="bottom-photo img-change">
                     <img src="img/main-page/right-photo-top-2.jpg" alt="">
                 </div> -->
-                <a href="#">  
-                    <div class="bottom-photo first-right place-item-img-1">
+                <a class="eq-right-side" href="#">  
+                    <div class="bottom-photo first-right place-item-img-1 place-eq-item-1">
                         <img src="img/equipment/Кресла.jpg" alt="">
-                        <div class="goods-eq-title"><span>Кресла</span></div>
+                        <div class="goods-eq-title eq-title-sm"><span>Кресла</span></div>
                     </div>
                 </a>
                 <a href="#">  
-                    <div class="bottom-photo right-bottom-last place-item-img-1">
+                    <div class="bottom-photo right-bottom-last place-item-img-1 eq-bot-item">
                         <img src="img/equipment/Пуфы.jpg" alt="">
-                        <div class="goods-eq-title"><span>Пуфы</span></div>
+                        <div class="goods-eq-title eq-title-sm"><span>Пуфы</span></div>
                     </div>
                 </a>
             </div>
@@ -771,8 +771,8 @@
     <div class="title">
         <span>БИЗНЕС ПОД КЛЮЧ</span>
     </div>
-    <div class="bussiness">
-		<div class="bussiness-description">
+    <div class="bussiness eq-bussiness">
+		<div class="bussiness-description eq-bussiness-des">
 			<h2>
 			ОТ ЯРКОГО ОБРАЗА<br class="bussiness-title">
 			К ПРОДУМАННОМУ ПРОЕКТУ
@@ -789,7 +789,7 @@
 	</div>
 </div>
 <div class="container">
-	<div class="arrows">
+	<div class="arrows eq-arrows">
 		<div class="arrow-item arrow-nowrap">
 			<div class="numbers numbers-small">1</div> <img class="arrow-img" src="img/arrow-1.png" alt="">
 			<div class="arrow-item-description"> <img src="img/svg/idea-icon.svg" alt="">
@@ -817,15 +817,15 @@
 			</div>
 		</div>
 	</div>
-	<div class="numbers-steps">
+	<div class="numbers-steps eq-numbers-steps">
 		<div class="numbers">1</div>
 		<div class="numbers">2</div>
 		<div class="numbers">3</div>
 	</div>
 </div>
 <div class="container">
-	<div class=" eq-form-box eq-form-box-1">
-		<a href="#"><div name="form-btn" class="design-btn red-form-btn form-btn">ОСТАВИТЬ ЗАЯВКУ</div></a>
+	<div class=" eq-form-box eq-form-box-1 eq-af-arrows">
+		<a href="#"><div name="form-btn" class="design-btn red-form-btn form-btn eq-btn">ОСТАВИТЬ ЗАЯВКУ</div></a>
     </div>
     <a href="#3" class="goods__banner eq-banner">
         <div class="goods__banner_content">
@@ -842,7 +842,7 @@
 		</span>
 	</div>
 <div class="bussiness main-bussiness">
-    <div class="bussiness-description design-main__description main-page-description">
+    <div class="bussiness-description design-main__description main-page-description eq-description-des">
         <h2>
             ОТ ЯРКОГО ОБРАЗА<br class="bussiness-title">
             К ПРОДУМАННОМУ ПРОЕКТУ
@@ -852,7 +852,7 @@
 			Наши профессиональные дизайнеры помогут
 			Вам воплотить идею в жизнь!						   
         </p>
-       <a href=""><div class="more-btn main-more-btn main-more-btn-bussiness">ПОДРОБНЕЕ</div></a>
+       <a href=""><div class="more-btn main-more-btn main-more-btn-bussiness eq-design-btn">ПОДРОБНЕЕ</div></a>
     </div>
     <div class="bussiness-items first-item first-main-item">
         <img src="img/equipment/Дизайн и проектирование 1.jpg" alt="">
@@ -869,8 +869,8 @@
         </span>
     </div>
     <div class="places places-wrapper">
-        <div class="place-item place-item-1">
-            <div class="place-item-wrapper">
+        <div class="place-item place-item-1 place-eq-item-5">
+            <div class="place-item-wrapper eq-wrap">
 				<a href="#">
 					<div class="place-item-img">
 						<img src="img/equipment/Для кого Бутики.jpg" alt=""> 
@@ -886,7 +886,7 @@
 					</p>
 				</div>
             </div>
-            <div class="place-item-wrapper">
+            <div class="place-item-wrapper eq-wrap">
 				<a href="#">
 					<div class="place-item-img">
 						<img src="img/equipment/Для кого Магазины.jpg" alt="">
@@ -902,7 +902,7 @@
 					</p>
 				</div>
             </div>
-            <div class="place-item-wrapper">
+            <div class="place-item-wrapper eq-wrap">
 				<a href="#">
 					<div class="place-item-img">
 						<img src="img/equipment/Для кого Салоны красоты.jpg" alt="">
@@ -920,8 +920,8 @@
 				</div>
             </div>
         </div>
-        <div class="place-item place-item-2">
-            <div class="place-item-wrapper">
+        <div class="place-item place-item-2 place-eq-item-5">
+            <div class="place-item-wrapper eq-wrap">
 				<a href="#">
 					<div class="place-item-img">
 						<img src="img/equipment/Для кого Рестораны.jpg" alt="">
@@ -938,7 +938,7 @@
 					</p>
 				</div>
             </div>
-            <div class="place-item-wrapper">
+            <div class="place-item-wrapper eq-wrap eq-last-wrap">
 				<a href="#">
 					<div class="place-item-img">
 						<img src="img/equipment/Для кого Офисы.jpg" alt="">
@@ -957,9 +957,9 @@
             </div>
 		</div>
 		<div class="form-box eq-form-box eq-form-box-2">
-			<a href="#"><div name="form-btn" class="design-btn red-form-btn form-btn">ОСТАВИТЬ ЗАЯВКУ</div></a>
+			<a href="#"><div name="form-btn" class="design-btn red-form-btn form-btn eq-btn">ОСТАВИТЬ ЗАЯВКУ</div></a>
 		</div>
-		<a href="#3" class="goods__banner eq-banner">
+		<a href="#3" class="goods__banner eq-banner eq-this-ban">
 			<div class="goods__banner_content">
 				<span class="goods__banner_link"><span>ПОКУПКА МЕБЕЛИ 
 					В ЛИЗИНГ  </span></span>
@@ -969,10 +969,10 @@
     </div>
 </div>
 <div class="container">
-	<div class="title pre-footer"> <span class="pre-footer-title">
+	<div class="title pre-footer eq-pre-footer"> <span class="pre-footer-title eq-pre-footer">
 			<p>ВЫГОДА</p> <span class="light-title">КОТОРУЮ <br class="pre-br">ВЫ ПОЛУЧАЕТЕ <br class="pre-br">РАБОТАЯ С НАМИ</span> </span>
 	</div>
-	<div class="benefit">
+	<div class="benefit eq-benefit">
 		<div class="benefit-item">
 			<div class="ben-for-li ben-title-1">
 				<div class="ben-title"> <img src="img/benefit-money.png" alt="numbers"> <span>
@@ -1018,17 +1018,16 @@
 			</ul>
 		</div>
 	</div>
-	<div class="design_buttons pre-footer-btn">
+	<div class="design_buttons pre-footer-btn eq-pre-foot-btn">
 		<a href="javascript:;" class="b24-request">
 			<div class="design-btn red-btn form-btn pre-footer-button">ОСТАВИТЬ ЗАЯВКУ</div>
 		</a>
 	</div>
 </div>
 <div class="container">
-	<div class="title pre-footer"> <span class="pre-footer-title">
-		<span class="light-title">если вам</span>&nbsp;<p>не подходит типовое обращение</p></span>
-</div>
-
+	<div class="title pre-footer eq-pre-footer"> <span class="pre-footer-title eq-pre-footer">
+		<p>если вам</p> <span class="light-title">не подходит типовое обращение</span></span>
+    </div>
 <div class="form-eq-wrapper">
 	<div class="left-form-photo">
 		<img src="img/equipment/Форма связи.jpg" alt="">
@@ -1058,6 +1057,7 @@
 		  </form>
 		</div>
 </div>
+
 <a href="#3" class="goods__banner eq-banner">
 	<div class="goods__banner_content">
 		<span class="goods__banner_link"><span>ПОКУПКА МЕБЕЛИ 
@@ -1106,13 +1106,14 @@
 	</div>
   </div>
 
-  <div class="use-materials-title">
+  <div class="use-materials-title eq-use-mat">
 	<h2><span>Используемые</span> материалы</h2>
 </div>
 <div class="use-materials">
 		<div class="use-materials-item use-materials-item-1">
 			<div class="use-materials-item-img">
-				<img src="img/bar-page/Metal.jpg" alt="">
+				<img class="big-ph" src="img/bar-page/Metal.jpg" alt="">
+				<img class="sm-ph" src="img/bar-page/Metal_small.jpg" alt="">
 			</div>
 			<div class="use-materials-item-description">
 				<span>МЕТАЛЛ</span>
@@ -1189,7 +1190,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="forma-title">
+	<div class="forma-title eq-forma-title">
 		<h2>
 			<span class="weight">ОСТАВТЕ ЗАЯВКУ</span>
 								И МЫ СВЯЖЕМСЯ С ВАМИ<br> 
@@ -1203,7 +1204,7 @@
 			ПРИМЕРЫ РАБОТ
 		</span>
 	</div>
-	<div class="example_1">
+	<div class="example_1 eq-example-1">
 		<div class="example-wrap">
           <div class="ex-item">
 			  <img src="img/equipment/Ресторан Fish me.jpg" alt="example">
@@ -1253,7 +1254,7 @@
 			</div>
 		  </div>
 	</div>
-	<div class="example_2">
+	<div class="example_2 example-eq-2">
 		<div class="example_item example-2-item">
 			<img src="img/equipment/Стадион Спартак.jpg" alt="example">
 			<div class="example-text">
