--- a/index-main.html
+++ b/index-main.html
@@ -790,20 +790,15 @@
                 К ПРОДУМАННОМУ ПРОЕКТУ
             </h2>
             <p>
-                Рыбатекст используется дизайнерами, проектировщиками
-                и фронтендерами, когда нужно быстро заполнить макеты
-                или прототипы содержимым. Это тестовый контент,
-                который не должен нести никакого смысла, лишь показать
-                наличие самого текста или продемонстрировать
-                типографику в деле.                
+				Компания ТехноБар сможет реализовать проект любой сложности! Професиональные сотрудники,современное оборудование и огромный опыт гарантируют Вам идеальный результат по оптовым ценам!               
             </p>
            <a href="#" class="main-more-btn-wr"><div class="more-btn main-more-btn main-more-btn-bussiness">ПОДРОБНЕЕ</div></a>
         </div>
         <div class="bussiness-items first-item first-main-item">
-            <img src="img/main-page/design-project.jpg" alt="">
+            <img src="img/main-page/left-des.jpg" alt="">
         </div>
         <div class="bussiness-items second-item second-main-item">
-            <img src="img/test-photo/test-5.jpg" alt="">
+            <img src="img/main-page/right-des.jpg" alt="">
         </div>
     </div>
     <a href="#3" class="goods__banner main-goods__banner">
@@ -822,8 +817,8 @@
         <div class="main-grid-photos">
             <div class="main-left">
 				<div class="main-left-items">
-					<img src="img/main-page/left-photo-top.jpg" alt="" style="margin-bottom: 10px;">
-					<img src="img/main-page/left-photo-bot.jpg" alt="">
+					<img src="img/main-page/left-top.jpg" alt="" style="margin-bottom: 10px;">
+					<img src="img/main-page/left-bot.jpg" alt="">
 			    </div>
             </div>
             <div class="main-grid-description main-grid-description-first">
@@ -833,38 +828,36 @@
                     И ВСЕ ОСТАЛЬНОЕ
                 </h2>
                 <p>
-                    Рыбатекст используется дизайнерами, проектировщиками
-                    и фронтендерами, когда нужно быстро заполнить макеты
-                    или прототипы содержимым. Это тестовый контент,
-                    который не должен нести никакого смысла, лишь показать
-                    наличие самого текста или продемонстрировать
-                    типографику в деле.                
+					В нашем портфолио уже присутствуют десятки
+					 реализованных проектов кафе,баром и ресторанов. 
+					 Нам доверяют лидеры рынка и регулярно возвращаются
+					 к нам для открытия новых заведений. Свяжитесь с нами и работайте с лучшими!               
                 </p>
                <a href="#" class="main-more-btn-wr"><div class="more-btn main-more-btn">ПОДРОБНЕЕ</div></a>
             </div>
             <div class="main-right">
                 <div class="main-right-top">
 					<div class="top-photo img-change">
-					    <img src="img/main-page/right-photo-bot-390.jpg" alt="">
+					    <img src="img/main-page/right-top2-small.jpg" alt="">
 					</div>
 					<div class="top-photo first-right">
-					    <img src="img/main-page/right-photo-top-1.jpg" alt="">
+					    <img src="img/main-page/right-top1.jpg" alt="">
 					</div>
 					<div class="top-photo right-top-last">
-						<img class='small-1' src="img/main-page/left-photo-bot-338.jpg" alt="">
-						<img class='big-1' src="img/main-page/right-photo-top-2.jpg" alt="">
+						<img class='small-1' src="img/main-page/right-top1-small.jpg" alt="">
+						<img class='big-1' src="img/main-page/right-top2.jpg" alt="">
 				    </div>
                 </div>
                 <div class="main-right-bottom">
 					<div class="bottom-photo img-change">
-					    <img src="img/main-page/left-top-318.jpg" alt="">
+					    <img src="img/main-page/right-bot1-small.jpg" alt="">
 					</div>
 					<div class="bottom-photo first-right">
-					    <img src="img/main-page/right-photo-bot-1.jpg" alt="">
+					    <img src="img/main-page/right-bot1.jpg" alt="">
 					</div>
 					<div class="bottom-photo right-bottom-last">
-						<img class="big-1" src="img/main-page/on_change-318.jpg"  alt="">
-					   <img class="small-1" src="img/main-page/right-photo-410.jpg"  alt="">
+						<img class="big-1" src="img/main-page/right-bot2.jpg"  alt="">
+					   <img class="small-1" src="img/main-page/right-bot2-small.jpg"  alt="">
 				    </div>
                 </div>
             </div>
@@ -878,15 +871,15 @@
         <div class="box-image mainp-box-image">
             <div class="left-photos left-mainp-photos">
 				<div class="yellow main-yellow">
-				   <img src="img/yellow-1.png" alt="forniture">
+				   <img src="img/main-page/yellow-1.jpg" alt="forniture">
 				</div>
 				<div class="grid-img">
-				   <img src="img/red-1.png" alt="forniture">
+				   <img src="img/main-page/red-1.jpg" alt="forniture">
 				</div>
             </div>
             <div class="right-photo mainp-right-photo">
 				<div class="blue-big">
-				    <img src="img/blue-big-1.png" alt="forniture">
+				    <img src="img/main-page/blue-big-1.jpg" alt="forniture">
 			    </div>
             </div>
 		</div>
@@ -896,12 +889,9 @@
 					СТИЛЬ, УЮТ И УДОБСТВО
 				</h2>
 				<p>
-					Рыбатекст используется дизайнерами, проектировщиками
-					и фронтендерами, когда нужно быстро заполнить макеты
-					или прототипы содержимым. Это тестовый контент,
-					который не должен нести никакого смысла, лишь показать
-					наличие самого текста или продемонстрировать
-					типографику в деле.                        
+					Номерные фонды любых объемов и бюджетов, гарантия на всю продукцию и индивидуальный
+					подход к каждому нашему клиенту! Большой выбор готовых вариантов,
+					либо изготовление под заказ.                        
 				</p>
 			</div>
 				<div class="more-button">
@@ -928,29 +918,23 @@
 			<img src="img/main-page/trade-1.jpg" class="trade-style-img" alt="trade-1">
 		</div>	
 		<div class="trade-wrapper">
-			<img src="img/main-page/trade-2.png" class="trade-style trade-style-img" alt="">
+			<img src="img/main-page/trade-2.jpg" class="trade-style trade-style-img" alt="">
 		</div>
 	         <div class="adap-trade">
 				 <div class="trade-3">
-				    <img src="img/main-page/trade-3.png" alt="">
+				    <img src="img/main-page/trade-3.jpg" alt="">
 			    </div>
 				<div class="trade-hidden">
 				     <img src="img/main-page/trade-hide.jpg" alt="">
 			    </div>
 			</div>	
 			<div class="main-grid-description trade-description trade-style">
-                <h2>
-                    НАчем ПОСИДЕТЬ,<br>
-                    ЗА ЧЕМ Посидеть<br> 
-                    И ВСЕ ОСТАЛЬНОЕ
+				<h2>
+				ГДЕ ТОРГОВАТЬ <br>
+				И ГДЕ РАБОТАТЬ
                 </h2>
                 <p>
-                    Рыбатекст используется дизайнерами, проектировщиками
-                    и фронтендерами, когда нужно быстро заполнить макеты
-                    или прототипы содержимым. Это тестовый контент,
-                    который не должен нести никакого смысла, лишь показать
-                    наличие самого текста или продемонстрировать
-                    типографику в деле.                
+					Собственное производство барных стоек и лобби. Компания ТехноБар гарантирует качество продукции, полное соответствие ТЗ и прекрасный внешний вид!               
                 </p>
                <a href="#" class="main-more-btn-wr"><div class="more-btn main-more-btn">ПОДРОБНЕЕ</div></a>
 			</div>
@@ -963,36 +947,32 @@
 	<div class="title"><span>СОБСТВЕННОЕ ПРОИЗВОДСТВО МЕБЕЛИ</span></div>
 	<div class="production">
 		<div class="production-item first-prod">
-			<img src="img/main-page/producntion.png" alt="prod.">
+			<img src="img/main-page/prod-1.jpg" alt="prod.">
 			<div class="production-item-text">
 				<p>
-					Рыбатекст используется дизайнерами,
-					проектировщиками и фронтендерами,
-					когда нужно быстро заполнить макеты
-					или прототипы содержимым. 
+					Професcиональные сотрудники собирают всю мебель вручную! Мы гарантируем надежность
+					каждогостыка и шва. 
 				</p>
 		    </div>
 		</div>
 		<div class="production-item production-item-3">
-			<img src="img/main-page/producntion.png" alt="prod.">
+			<img src="img/main-page/prod-2.jpg" alt="prod.">
 			<div class="production-item-text">
 				<p>
-					Рыбатекст используется дизайнерами,
-					проектировщиками и фронтендерами,
-					когда нужно быстро заполнить макеты
-					или прототипы содержимым. 
+					Мы тщательно отбираем материалы
+					 и производим мебель только из самых
+					  лучших пород дерева и тканей. У нас технологический 
+					  процесс тесно замиксован с ручным трудом и индивидуальным подходом!
 				</p>
 		    </div>
 			<a href="#" class="main-more-btn-wr product-btn"><div class="more-btn main-more-btn production-btn">ПРИМЕРЫ РАБОТ</div></a>
 		</div>
 		<div class="production-item first-prod">
-			<img src="img/main-page/producntion.png" alt="prod.">
+			<img src="img/main-page/prod-3.jpg" alt="prod.">
 			<div class="production-item-text">
 				<p>
-					Рыбатекст используется дизайнерами,
-					проектировщиками и фронтендерами,
-					когда нужно быстро заполнить макеты
-					или прототипы содержимым. 
+					Современное оборудование позволяет 
+					быстро и качественно производить мебель любой сложности
 				</p>
 		</div>
 	</div>
