отступы исправил в блоке где 6 изображений

--- a/index-main.html
+++ b/index-main.html
@@ -849,7 +849,7 @@
 				    </div>
                 </div>
                 <div class="main-right-bottom">
-					<div class="bottom-photo img-change">
+					<div class="bottom-photo img-change that-photo">
 					    <img src="img/main-page/right-bot1-small.jpg" alt="">
 					</div>
 					<div class="bottom-photo first-right">
