--- a/index-equipment.html
+++ b/index-equipment.html
@@ -647,19 +647,8 @@
 	<div class="container">     		
 <div class="lead__slider">
 <div class="owl-carousel owl-theme">
-		<a href="#">    				
-			    <div class="lead__item" id="bx_3218110189_14277" >
-				<div class="lead__img" style="background-image: url(img/equipment/main-slider.jpg)"></div>
-				<div class="lead__content">
-					<span><b>Вся мебель для кафе и ресторанов. </b><br>Изготовление на заказ под ваш дизайн проект. </span>
-				</div>
-			</div>
-		</a>							                    				<div class="lead__item" id="bx_3218110189_14278" >
-				<div class="lead__img" style="background-image: url(img/equipment/main-slider.jpg)"></div>
-				<div class="lead__content">
-					<span><b>Скидка 20%</b><br>на мебель нашего производства</span>
-				</div>
-			</div>
+							                
+
 																		<div class="lead__item" id="bx_3218110189_14279" >
 				<div class="lead__img" style="background-image: url(img/equipment/main-slider.jpg)"></div>
 				<div class="lead__content">
@@ -695,8 +684,8 @@
 	</span>
 </div>
 	<div class="design_buttons">
-		<a href="#"><div class="design-btn red-btn bar-btn">ОСТАВИТЬ ЗАЯВКУ</div></a>
-		<a href="#"><div class="design-btn black-btn bar-btn">ПОРТФОЛИО</div></a>
+		<a href="#"><div class="design-btn red-btn bar-btn">ОБСУДИТЬ ПРОЕКТ</div></a>
+		<a href="#"><div class="design-btn black-btn bar-btn">СКАЧАТЬ БРИФ</div></a>
 	</div>
 </div>
 </div>
@@ -784,7 +773,7 @@
 				Откройте свой бизнес вместе с ТехноБар!
 		    </p>
 		</div>
-		<div class="bussiness-items first-item"> <img src="img/equipment/Бизнес под ключ 1.jpg" alt=""> </div>
+		<div class="bussiness-items first-item eq-first-item"> <img src="img/equipment/Бизнес под ключ 1.jpg" alt=""> </div>
 		<div class="bussiness-items second-item"> <img src="img/equipment/Бизнес под ключ 2.jpg" alt=""> </div>
 	</div>
 </div>
@@ -1074,21 +1063,15 @@
 			<img src="img/equipment/Наше производство 1.jpg" alt="prod.">
 			<div class="production-item-text">
 				<p>
-					Рыбатекст используется дизайнерами,
-					проектировщиками и фронтендерами,
-					когда нужно быстро заполнить макеты
-					или прототипы содержимым. 
+					Профессиональные сотрудники собирают всю мебель вручную ! Мы гарантируем надежность каждого стыка и шва.
 				</p>
 		    </div>
 		</div>
-		<div class="production-item production-item-3">
+		<div class="production-item production-item-3 eq-production-item-3">
 			<img src="img/equipment/Наше производство 2.jpg" alt="prod.">
 			<div class="production-item-text">
 				<p>
-					Рыбатекст используется дизайнерами,
-					проектировщиками и фронтендерами,
-					когда нужно быстро заполнить макеты
-					или прототипы содержимым. 
+					Мы тщательно отбираем материалы и производим мебель только из самых лучших пород дерева и тканей. У нас технологический процесс тесно замиксован с ручным трудом и индивидуальным подходом!
 				</p>
 		    </div>
 			<a href="#"><div class="more-btn main-more-btn production-btn">ПРИМЕРЫ РАБОТ</div></a>
@@ -1097,10 +1080,7 @@
 			<img src="img/equipment/Наше производство 3.jpg" alt="prod.">
 			<div class="production-item-text">
 				<p>
-					Рыбатекст используется дизайнерами,
-					проектировщиками и фронтендерами,
-					когда нужно быстро заполнить макеты
-					или прототипы содержимым. 
+					Современное оборудование позволяет быстро и качественно производить мебель любой сложности
 				</p>
 		</div>
 	</div>
