--- a/order.html
+++ b/order.html
@@ -651,9 +651,9 @@
 							                
 
 																		<div class="lead__item" id="bx_3218110189_14279" >
-				<div class="lead__img" style="background-image: url(img/equipment/main-slider.jpg)"></div>
+				<div class="lead__img" style="background-image: url(img/order/banner-main.jpg)"></div>
 				<div class="lead__content">
-					<span><b>Скидка 20%</b><br>на мебель нашего производства</span>
+					<span><b>Уникальная мебель на заказ</b><br> для вашего проекта!</span>
 				</div>
 			</div>
 							</div>
